--- a/2015/tsconfig.json
+++ b/2015/tsconfig.json
@@ -2,12 +2,12 @@
   "compilerOptions": {
     "lib": ["es2023", "dom"],
     "types": ["node"],
-    "module": "node16",
+    "module": "ES2022",
     "target": "es2022",
 
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "moduleResolution": "node16"
+    "moduleResolution": "node"
   }
 }
